saving in storage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="controls">
             <div class="control-group">
                 <label for="start-time-input">Hora de Início Geral</label>
-                <input type="time" id="start-time-input" value="09:00">
+                <input type="time" id="start-time-input" value="09:00" step="600">
             </div>
             <div class="control-group" style="flex-grow: 1;">
                 <label for="new-task-input">Nova Tarefa (ou cole várias linhas)</label>
