--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="slogan">Organize seu tempo, alcance mais!</div>
         <div class="controls">
             <div class="control-group">
-                <label for="start-time-input">Hora de Início Geral</label>
-                <input type="time" id="start-time-input" value="09:00" step="600">
+                <label for="start-time-select">Hora de Início Geral</label>
+                <select id="start-time-select"></select>
             </div>
             <div class="control-group" style="flex-grow: 1;">
                 <label for="new-task-input">Nova Tarefa (ou cole várias linhas)</label>
